<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Auth">

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="23dp"
        android:textColor="@color/colorAccent"
        android:text="@string/find_password" />

    <TextView
        android:text="@string/please_enter_your_email"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextUserEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/buttonFind"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/bin_blue"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"
        android:text="@string/send" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:id="@+id/textviewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>


