<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".LoginActivity"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="35dp"
        android:text="LOGIN"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        android:layout_marginBottom="16dp">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint_email"
            android:id="@+id/et_id"
            >
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:id="@+id/et_pass"
            >
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bin_blue"
        android:textColor="#ffffff"
        android:text="@string/log_in"
        android:id="@+id/btn_login"
        android:textSize="18sp"
        android:textStyle="bold">
    </Button>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="Or">
    </TextView>


    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bin_blue"
        android:textColor="#ffffff"
        android:text="@string/sign_up"
        android:id="@+id/btn_register"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:textStyle="bold">
    </Button>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">
        <Button
            android:id="@+id/fid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="onClick"
            android:background="#FFFFFF"
            android:layout_weight="5"
            android:textSize="18sp"
            android:text="@string/find_email">
        </Button>
        <Button
            android:id="@+id/fpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:gravity="center"
            android:background="#FFFFFF"
            android:layout_weight="5"
            android:textSize="18sp"
            android:text="@string/find_password"
            tools:ignore="OnClick">
        </Button>
    </LinearLayout>

</LinearLayout>