<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_marginTop="90dp"
        android:layout_width="match_parent"
        android:layout_height="720dp"
        tools:context=".MapsActivity" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/mylocation"
        android:onClick="onLastLocationButtonClicked"
        android:text="@string/my_location"
        android:layout_margin="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="717dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/place_to_search" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bin_blue"
                android:text="@string/search"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>


</FrameLayout>
