<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".TaxiRoomActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/start_place"
            android:layout_weight="1"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/destination"
            android:layout_weight="1"
            android:textSize="18dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:text="@string/start_place"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center" />

        <ImageButton
            android:id="@+id/btn_chang_city"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/arrow">
        </ImageButton>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:text="@string/destination"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/map_blue"
            android:layout_weight="1.2"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/boarding_time"
        android:textSize="18dp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Spinner
            android:id="@+id/taxi_am_pm"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:spinnerMode="dropdown" />
        <Spinner
            android:id="@+id/taxi_hour"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:spinnerMode="dropdown" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text=":"
            android:layout_weight="1.3"
            android:textSize="18dp"/>

        <Spinner
            android:id="@+id/taxi_min"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:spinnerMode="dropdown" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_chat_room_change"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bin_blue"
        android:text="@string/create_room"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold">

    </Button>


</LinearLayout>